--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
     </div>
     <div class="row man_list">
      <div class="col-md-4">
-      <img src="http://pingendo.github.io/pingendo-bootstrap/assets/user_placeholder.png" class="center-block img-circle img-responsive" />
+      <img src="{{headimgurl}}" class="center-block img-circle img-responsive" />
       <h3 class="text-center">{{nickname}}</h3>
       <p class="text-center">{{openid}}</p>
       <p class="text-center">{{sex}}</p>
