--- a/templates/index.html
+++ b/templates/index.html
@@ -13,13 +13,12 @@
                     background-attachment:fixed;
                     background-repeat: no-repeat;
                     background-size: cover;
+                    padding:0;
                 }
                 .sec_01 h1,.sec_01 h3,.sec_01 p{color:white;}
                 .sec_01 img{width: 61%;}
                 .heading{
                     padding:0;
-                    margin-top: -34px;
-                    margin-bottom: 20px;
                     background: #333;
                     line-height: 30px;
                     width: 100%;
@@ -80,6 +79,12 @@
       <p class="text-center">{{province}}</p>
       <p class="text-center">{{country}}</p>
      </div>
+    </div>
+   </div>
+  </div>
+  <div class="section">
+   <div class="container hidden-sm hidden-xs">
+    <div class="row">
     </div>
    </div>
   </div>
