--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,8 @@
   <style>
             @media screen and (max-width: 991px){
                 .sec_01{
+                    width: 100%;
+                    height: 100%;
                     background-image : url('https://unsplash.imgix.net/uploads/14129863345840df499fc/0165574c?w=1024&amp;q=50&amp;fm=jpg&amp;s=6e5127e797feb9b5a72f7ae4a0f3a89b');
                     background-attachment:fixed;
                     background-repeat: no-repeat;
@@ -70,7 +72,7 @@
     </div>
     <div class="row man_list">
      <div class="col-md-4">
-      <img src="{{headimgurl}}" class="center-block img-circle img-responsive" />
+      <a href="http://python-ning.github.io/"><img src="{{headimgurl}}" class="center-block img-circle img-responsive" /></a>
       <h3 class="text-center">{{nickname}}</h3>
       <p class="text-center">{{openid}}</p>
       <p class="text-center">{{sex}}</p>
@@ -79,12 +81,6 @@
       <p class="text-center">{{province}}</p>
       <p class="text-center">{{country}}</p>
      </div>
-    </div>
-   </div>
-  </div>
-  <div class="section">
-   <div class="container hidden-sm hidden-xs">
-    <div class="row">
     </div>
    </div>
   </div>
